--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://althaf66.github.io"
 
 github:
-  username: althaf # change to your github username
+  username: Althaf66 # change to your github username
 
 twitter:
   username:  # change to your twitter username
